syntax = "proto3";

package side.gmm;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/sideprotocol/side/x/gmm/types";

message SwapAmountInRoute {
  uint64 pool_id = 1;
  string token_out_denom = 2;
}

message SwapAmountOutRoute {
  uint64 pool_id = 1;
  string token_in_denom = 2;
}